--- a/scss/base/_animales.scss
+++ b/scss/base/_animales.scss
@@ -1,10 +1,10 @@
 .div-animales{
     text-align: center;
     margin: 15px;
+    img{
+        width: 200px;
+        height: auto;
+        padding-bottom: 10px;
+    }
 }
 
-.div-animales img{
-    width: 200px;
-    height: auto;
-    padding-bottom: 10px;
-}
