--- a/scss/base/_atracciones.scss
+++ b/scss/base/_atracciones.scss
@@ -1,9 +1,8 @@
 .div-atracciones{
     text-align: center;
     margin: 15px;
-}
-
-.div-atracciones img{
-    width: 250px;
-    margin-bottom: 10px;
+        img{
+        width: 250px;
+        margin-bottom: 10px;
+        }
 }
