--- a/scss/base/_paquetes.scss
+++ b/scss/base/_paquetes.scss
@@ -15,7 +15,6 @@
 }
 
 .menu-paquetes{
-    margin-top: 70px;
     font-family: "Montserrat", sans-serif;
     font-size: 19px;
     font-weight: 700;
@@ -29,6 +28,7 @@
     border-radius: 50px;
     color: white;
     list-style: none;
+    margin-left: -25px;
 }
 
 .boton-paquetes{
