--- a/scss/base/_atracciones.scss
+++ b/scss/base/_atracciones.scss
@@ -1,6 +1,8 @@
 .div-atracciones{
     text-align: center;
     margin: 15px;
+    background: none;
+    border: none;
         img{
         width: 250px;
         margin-bottom: 10px;
